--- a/fare-dash-nyc/package.json
+++ b/fare-dash-nyc/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "leaflet": "^1.8.0",
     "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-leaflet": "^4.0.0",
     "react-map-gl": "^7.0.12",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
