--- a/fare-dash-nyc/package.json
+++ b/fare-dash-nyc/package.json
@@ -18,6 +18,7 @@
     "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
     "react-map-gl": "^7.0.12",
     "react-router-dom": "^6.3.0",
