--- a/fare-dash-nyc/package.json
+++ b/fare-dash-nyc/package.json
@@ -19,6 +19,7 @@
     "mapbox-gl": "^2.8.2",
     "mdbreact": "^5.2.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
