--- a/fare-dash-nyc/package.json
+++ b/fare-dash-nyc/package.json
@@ -21,6 +21,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-hook-geolocation": "^1.0.11",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
     "react-map-gl": "^7.0.12",
